compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_with_record_access.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub type Point {\n  Point(x: Int, y: Int)\n}\n\npub fn main(p: Point) -> Int {\n  case p.x > 0 {\n    True -> $return p.x + p.y\n    False -> 0\n  }\n}"
---
----- SOURCE CODE

pub type Point {
  Point(x: Int, y: Int)
}

pub fn main(p: Point) -> Int {
  case p.x > 0 {
    True -> $return p.x + p.y
    False -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).
-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-file("project/test/my/mod.gleam", 6).
-spec main(point()) -> integer().
main(P) ->
    case erlang:element(2, P) > 0 of
        true ->
            erlang:element(2, P) + erlang:element(3, P);

        false ->
            0
    end.
